Added the function of ingest archived pages. This is highly experimental, it is highly probably that the function will damage your mental health....

--- a/readme.html
+++ b/readme.html
@@ -54,7 +54,8 @@
         provides the following functionality:</p>
     <ul>
         <li>Uploading a Wikipedia Export File or direct download (optional auto ingest) an article from
-            English or German Wikipedia site
+            English or German Wikipedia site. You can also try to download the archived pages from the Talk:
+            (or Diskussion:) namespace. You must first know how many archived pages there are!
         </li>
         <li>View each revision</li>
         <li>Compare two revisions</li>
